# aitutor

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/ailearn_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/api/: nudges.py  practice.py  providers.py  sessions.py
backend/app/core/: config.py
backend/app/providers/: base.py  mock.py  openai_provider.py  sarvam.py
backend/app/schemas/: common.py  nudges.py  practice.py  providers.py  sessions.py
backend/app/services/: nudge_service.py  practice_service.py  providers.py  report_generator.py  session_service.py  text_normalizer.py  text_refiner.py
backend/tests/: conftest.py  test_practice.py  test_provider_endpoints.py  test_sessions.py  test_text_normalizer.py  test_text_refiner.py  test_voice_socket.py
docs/: rnd-plan.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BackendDiagnostics.tsx  NudgePanel.tsx  SessionPanel.tsx
frontend/lib/: api.ts
frontend/public/: manifest.webmanifest  sw.js
